# COCO

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compose.yaml
.github/workflows/: cmake.yml  npm-publish.yml
coco-client/: .env.local  package-lock.json
gui/: package-lock.json  package.json
gui/app/: index.html  package-lock.json  package.json  tsconfig.json
gui/app/src/: main.ts  styles.css
gui/coco/: package-lock.json  package.json
gui/coco/src/: index.ts
gui/coco/src/coco/: coco.ts  rules.ts
gui/coco/src/coco/components/: api.ts  chart.ts  item.ts  item_chart.ts  item_properties.ts  item_publisher.ts  item_types.ts  items_table.ts  map.ts  offcanvas.ts  publisher.ts  taxonomy.ts  type.ts
gui/lib/: README.md  package-lock.json  package.json
gui/lib/src/: index.ts
gui/lib/src/coco/: coco.ts  rules.ts  taxonomy.ts
gui/lib/src/coco/components/: chart.ts  item.ts  item_chart.ts  item_list.ts  item_properties.ts  item_publisher.ts  offcanvas.ts  publisher.ts  taxonomy.ts  type.ts  type_list.ts
gui/mobile/: .gitignore  build.gradle  settings.gradle
gui/mobile/coco/: build.gradle  google-services.json
gui/mobile/coco/src/main/: AndroidManifest.xml
gui/mobile/coco/src/main/java/it/cnr/coco/: CoCoApp.java  CoCoService.java  Connection.java  ConnectionListener.java  CreateUserActivity.java  LogInActivity.java  MainActivity.java  MessagingService.java  Settings.java  SettingsActivity.java
gui/mobile/coco/src/main/java/it/cnr/coco/api/: BoolProperty.java  BoolPropertyType.java  CoCo.java  CoCoListener.java  CoCoService.java  FloatProperty.java  FloatPropertyType.java  IntProperty.java  IntPropertyType.java  Item.java  ItemProperty.java  ItemPropertyType.java  JSONProperty.java  JSONPropertyType.java  Property.java  PropertyType.java  StringProperty.java  StringPropertyType.java  SymbolProperty.java  SymbolPropertyType.java  Type.java  Value.java
gui/mobile/coco/src/main/java/it/cnr/coco/model/: BoolProperty.java  FloatProperty.java  IntProperty.java  Property.java  Type.java
gui/mobile/coco/src/main/java/it/cnr/coco/utils/: Assertion.java  Camera.java  CoCoSTT.java  CoCoTTS.java  Connection.java  ConnectionListener.java  Face.java  Language.java  Settings.java
gui/mobile/coco/src/main/res/layout/: activity_create_user.xml  activity_login.xml  activity_main.xml  activity_settings.xml
gui/mobile/coco/src/main/res/layout-land/: activity_main.xml
gui/mobile/coco/src/main/res/menu/: main_menu.xml
gui/mobile/coco/src/main/res/raw/: cert.pem
gui/mobile/coco/src/main/res/values/: strings.xml  styles.xml
gui/mobile/coco/src/main/res/xml/: network_security_config.xml
gui/src/: main.ts  styles.css
include/: chart.h  coco.h  coco.hpp  coco_api.hpp  coco_core.h  coco_core.hpp  coco_db.h  coco_db.hpp  coco_executor.h  coco_executor.hpp  coco_item.hpp  coco_listener.h  coco_middleware.h  coco_module.hpp  coco_parameter.hpp  coco_property.hpp  coco_rule.hpp  coco_type.hpp  instance.h  location.h  mongo_db.h  mqtt_middleware.h  parameter.hpp  sensor.h  sensor.hpp  sensor_network.h  sensor_type.h  sensor_type.hpp  user.h
include/auth/: auth_db.hpp  coco_auth.hpp  coco_noauth.hpp
include/db/mongo/: mongo_db.hpp
include/deliberative/: coco_deliberative.hpp  coco_executor.hpp  deliberative_db.hpp  deliberative_server.hpp
include/fcm/: coco_fcm.hpp  fcm_db.hpp  fcm_server.hpp
include/llm/: coco_llm.hpp  llm.hpp  llm_db.hpp  llm_server.hpp
include/mongo/: bson_parameter_converter.hpp  mongo_db.h  mongo_db.hpp
include/mqtt/: coco_mqtt.hpp  mqtt_connection.hpp
include/server/: coco_server.hpp
include/sm/: node.hpp
include/transformer/: coco_transformer.hpp
ros/: CMakeLists.txt  coco_ros_generator.py  main.cpp  ros_generator.py  ros_interface_generator.py
ros/include/: interface_generator.hpp
ros/src/: interface_generator.cpp
rules/: ontology.clp  rules.clp
rules/examples/: blood_pressure.clp  temp.clp
scripts/: Dockerfile  coco_app_cpp.tmpl  coco_app_hpp.tmpl  coco_db_cpp.tmpl  coco_db_hpp.tmpl  coco_listener_hpp.tmpl  create_new_project.py  new_coco_project.py
src/: COCOConfig.cmake.in  chart.cpp  coco.cpp  coco_api.cpp  coco_core.cpp  coco_db.cpp  coco_executor.cpp  coco_item.cpp  coco_middleware.cpp  coco_module.cpp  coco_property.cpp  coco_rule.cpp  coco_type.cpp  mongo_db.cpp  mqtt_middleware.cpp  sensor.cpp  sensor_network.cpp  sensor_type.cpp
src/auth/: auth_db.cpp  coco_auth.cpp  coco_noauth.cpp
src/auth/keycloack/: pom.xml
src/auth/keycloack/src/main/java/it/cnr/istc/coco/: UserRegistrationListener.java  (+1 more)
src/config/: CMakeLists.txt  config.cpp  main.cpp
src/config/include/: config_generator.hpp
src/config/src/: config_generator.cpp
src/db/mongo/: mongo_db.cpp
src/deliberative/: coco_deliberative.cpp  coco_executor.cpp  deliberative_db.cpp  deliberative_server.cpp
src/exec/: main.cpp
src/fcm/: coco_fcm.cpp  fcm_db.cpp  fcm_server.cpp
src/llm/: coco_llm.cpp  llm.cpp  llm_db.cpp  llm_server.cpp
src/mongo/: bson_parameter_converter.cpp  mongo_db.cpp
src/mqtt/: coco_mqtt.cpp  mqtt_connection.cpp  mqtt_middleware.cpp
src/server/: coco_server.cpp
src/transformer/: coco_transformer.cpp
tests/: CMakeLists.txt  README.md  cert.cnf  cert.csr  key.pem  test_coco.cpp  test_fcm.cpp  test_llm.cpp  test_raise.cpp  test_restart.cpp  test_robot.cpp
tests/coco/: config.py
tests/config/: CMakeLists.txt  coco_config.cpp
tests/config/items/: john_doe.json
tests/config/rules/: is_adult.clp  rule.clp
tests/config/types/: adult.json  child.json  man.json  parent.json  person.json  woman.json
tests/llm/: .env  .env.example  app.py  understand.jinja2
tests/raise/: anxiety.clp  config.py  dyskinesia.clp  excessive_heat.clp  fluctuation.clp  freezing.clp  mental_fatigue.clp  physical_fatigue.clp  sensory_disregulation.clp  sensory_dysregulation.clp
tests/restart/: config.py  robot_training.clp
tests/robot/: config.py
tests/ros/: .gitignore  CMakeLists.txt  test_ros.cpp
tests/ros/items/: r0.json
tests/ros/types/: robot.json
tests/sprinkler/: config.py  sprinkler.clp
